tests/incremental_cycle/incremental_cycle.exp
Error: A.js:4
  4:   b: number;
          ^^^^^^ number. This type is incompatible with
  6:   b: B;
          ^ B. See: C.js:6

Error: A.js:5
  5:   c: string;
          ^^^^^^ string. This type is incompatible with
  6:   c: C;
          ^ C. See: B.js:6

Error: B.js:6
  6:   c: C;
          ^ C. This type is incompatible with
  5:   c: string;
          ^^^^^^ string. See: A.js:5

Error: C.js:6
  6:   b: B;
          ^ B. This type is incompatible with
  4:   b: number;
          ^^^^^^ number. See: A.js:4


Found 4 errors
Error: A.js:4
  4:   b: number;
          ^^^^^^ number. This type is incompatible with
  6:   b: B;
          ^ string. See: C.js:6

Error: C.js:6
  6:   b: B;
          ^ string. This type is incompatible with
  4:   b: number;
          ^^^^^^ number. See: A.js:4


Found 2 errors
Error: A.js:4
  4:   b: number;
          ^^^^^^ number. This type is incompatible with
  6:   b: B;
          ^ string. See: C.js:6

Error: C.js:6
  6:   b: B;
          ^ string. This type is incompatible with
  4:   b: number;
          ^^^^^^ number. See: A.js:4


Found 2 errors
Error: A.js:4
  4:   b: number;
          ^^^^^^ number. This type is incompatible with
  6:   b: B;
          ^ string. See: C.js:6

Error: C.js:6
  6:   b: B;
          ^ string. This type is incompatible with
  4:   b: number;
          ^^^^^^ number. See: A.js:4


Found 2 errors
